--- a/components/NavigationComponent.html
+++ b/components/NavigationComponent.html
@@ -141,6 +141,9 @@
                                 <a href="#isAuth">isAuth</a>
                             </li>
                             <li>
+                                <a href="#isDarkTheme">isDarkTheme</a>
+                            </li>
+                            <li>
                                 <a href="#isHandset$">isHandset$</a>
                             </li>
                             <li>
@@ -167,6 +170,9 @@
                             <li>
                                 <a href="#onLogout">onLogout</a>
                             </li>
+                            <li>
+                                <a href="#toggleTheme">toggleTheme</a>
+                            </li>
                         </ul>
                     </td>
                 </tr>
@@ -190,7 +196,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="21" class="link-to-prism">src/app/core/navigation/navigation.component.ts:21</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="22" class="link-to-prism">src/app/core/navigation/navigation.component.ts:22</a></div>
                             </td>
                         </tr>
 
@@ -271,8 +277,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="51"
-                            class="link-to-prism">src/app/core/navigation/navigation.component.ts:51</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="59"
+                            class="link-to-prism">src/app/core/navigation/navigation.component.ts:59</a></div>
                 </td>
             </tr>
 
@@ -312,8 +318,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="31"
-                            class="link-to-prism">src/app/core/navigation/navigation.component.ts:31</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="32"
+                            class="link-to-prism">src/app/core/navigation/navigation.component.ts:32</a></div>
                 </td>
             </tr>
 
@@ -353,8 +359,8 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="43"
-                            class="link-to-prism">src/app/core/navigation/navigation.component.ts:43</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="51"
+                            class="link-to-prism">src/app/core/navigation/navigation.component.ts:51</a></div>
                 </td>
             </tr>
 
@@ -362,6 +368,47 @@
             <tr>
                 <td class="col-md-4">
                     <div class="io-description"><p>Log out user</p>
+</div>
+
+                    <div class="io-description">
+                        <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
+
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="toggleTheme"></a>
+                    <span class="name">
+                        <b>
+                            toggleTheme
+                        </b>
+                        <a href="#toggleTheme"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+<code>toggleTheme()</code>
+                </td>
+            </tr>
+
+
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-line">Defined in <a href="" data-line="44"
+                            class="link-to-prism">src/app/core/navigation/navigation.component.ts:44</a></div>
+                </td>
+            </tr>
+
+
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Change theme.</p>
 </div>
 
                     <div class="io-description">
@@ -399,7 +446,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/core/navigation/navigation.component.ts:16</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/core/navigation/navigation.component.ts:17</a></div>
                             </td>
                         </tr>
 
@@ -435,7 +482,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="17" class="link-to-prism">src/app/core/navigation/navigation.component.ts:17</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="18" class="link-to-prism">src/app/core/navigation/navigation.component.ts:18</a></div>
                             </td>
                         </tr>
 
@@ -472,6 +519,32 @@
             <tbody>
                 <tr>
                     <td class="col-md-4">
+                        <a name="isDarkTheme"></a>
+                        <span class="name">
+                            <b>
+                            isDarkTheme</b>
+                            <a href="#isDarkTheme"><span class="icon ion-ios-link"></span></a>
+                        </span>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Default value : </i><code>false</code>
+                        </td>
+                    </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                    <div class="io-line">Defined in <a href="" data-line="16" class="link-to-prism">src/app/core/navigation/navigation.component.ts:16</a></div>
+                            </td>
+                        </tr>
+
+
+            </tbody>
+        </table>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
                         <a name="isHandset$"></a>
                         <span class="name">
                             <b>
@@ -495,7 +568,7 @@
                     </tr>
                         <tr>
                             <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="19" class="link-to-prism">src/app/core/navigation/navigation.component.ts:19</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="20" class="link-to-prism">src/app/core/navigation/navigation.component.ts:20</a></div>
                             </td>
                         </tr>
 
@@ -549,6 +622,7 @@ import { MatSidenav } from &#x27;@angular/material/sidenav&#x27;;
 export class NavigationComponent implements OnInit, OnDestroy {
   isOpened &#x3D; false;
   isAuth &#x3D; false;
+  isDarkTheme &#x3D; false;
   private authListenerSubscription: Subscription;
   @ViewChild(&#x27;drawer&#x27;, { static: false }) drawer: MatSidenav;
 
@@ -574,6 +648,13 @@ export class NavigationComponent implements OnInit, OnDestroy {
   }
 
   /**
+   * Change theme.
+   */
+  toggleTheme() {
+    this.isDarkTheme &#x3D; !this.isDarkTheme;
+  }
+
+  /**
    * Log out user
    */
   onLogout() {
@@ -594,7 +675,10 @@ export class NavigationComponent implements OnInit, OnDestroy {
     </div>
 
     <div class="tab-pane fade " id="c-templateData">
-        <pre class="line-numbers"><code class="language-html">&lt;mat-sidenav-container class&#x3D;&quot;sidenav-container&quot;&gt;
+        <pre class="line-numbers"><code class="language-html">&lt;mat-sidenav-container
+  class&#x3D;&quot;sidenav-container mat-app-background&quot;
+  [ngClass]&#x3D;&quot;{ &#x27;dark-theme&#x27;: isDarkTheme }&quot;
+&gt;
   &lt;mat-sidenav
     #drawer
     class&#x3D;&quot;sidenav&quot;
@@ -679,6 +763,7 @@ export class NavigationComponent implements OnInit, OnDestroy {
           Log Out
         &lt;/a&gt;
       &lt;/mat-nav-list&gt;
+      &lt;mat-slide-toggle matTooltip&#x3D;&#x27;Change theme&#x27; (change)&#x3D;&quot;toggleTheme()&quot;&gt;&lt;/mat-slide-toggle&gt;
     &lt;/mat-toolbar&gt;
 
     &lt;ng-content&gt;&lt;/ng-content&gt;
@@ -705,10 +790,6 @@ export class NavigationComponent implements OnInit, OnDestroy {
   z-index: 1;
 }
 
-.main-navigation &gt; .mat-list-item {
-  color: #fff;
-}
-
 .main-navigation {
   display: flex;
   align-self: baseline;
@@ -723,8 +804,8 @@ a {
   color: #fff;
 }
 
-.mat-nav-list a.active {
-  color: #febf6e;
+.mat-nav-list .mat-list-item {
+  color: #fff;
 }
 </code></pre>
     </div>
@@ -754,8 +835,8 @@ a {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><mat-sidenav-container class="sidenav-container">  <mat-sidenav    #drawer    class="sidenav"    fixedInViewport="true"    [attr.role]="(isHandset$ | async) ? \'dialog\' : \'navigation\'"    [mode]="(isHandset$ | async) ? \'over\' : \'side\'"    [opened]="(isHandset$ | async) && isOpened"  >    <mat-toolbar color="primary" class="mat-elevation-z2">Menu</mat-toolbar>    <mat-nav-list>      <a        mat-list-item        routerLink="/board"        routerLinkActive="active"        *ngIf="isAuth"        (click)="drawer.close()"      >        My Board      </a>      <a        mat-list-item        routerLink="/user/signup"        routerLinkActive="active"        *ngIf="!isAuth"        (click)="drawer.close()"      >        Sign Up      </a>      <a        mat-list-item        routerLink="/user/login"        routerLinkActive="active"        *ngIf="!isAuth"        (click)="drawer.close()"      >        Log In      </a>      <a mat-list-item *ngIf="isAuth" (click)="onLogout()">        Log Out      </a>    </mat-nav-list>  </mat-sidenav>  <mat-sidenav-content>    <mat-toolbar color="primary" class="mat-elevation-z8">      <button        type="button"        aria-label="Toggle sidenav"        mat-icon-button        (click)="drawer.toggle()"        *ngIf="isHandset$ | async"      >        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>      </button>      <span><a routerLink="">devDo</a></span>      <div class="spacer"></div>      <mat-nav-list class="main-navigation" *ngIf="!(isHandset$ | async)">        <a          mat-list-item          routerLink="/board"          routerLinkActive="active"          *ngIf="isAuth"        >          My Board        </a>        <a          mat-list-item          routerLink="/user/signup"          routerLinkActive="active"          *ngIf="!isAuth"        >          Sign Up        </a>        <a          mat-list-item          routerLink="/user/login"          routerLinkActive="active"          *ngIf="!isAuth"        >          Log In        </a>        <a mat-list-item *ngIf="isAuth" (click)="onLogout()">          Log Out        </a>      </mat-nav-list>    </mat-toolbar>    <ng-content></ng-content>  </mat-sidenav-content></mat-sidenav-container></div>'
-    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'BoardComponent', 'selector': 'app-board'},{'name': 'CreateTaskComponent', 'selector': 'app-create-task'},{'name': 'DoingComponent', 'selector': 'app-doing'},{'name': 'DoneComponent', 'selector': 'app-done'},{'name': 'EditTaskComponent', 'selector': 'app-edit-task'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'NavigationComponent', 'selector': 'app-navigation'},{'name': 'PageNotFoundComponent', 'selector': 'app-page-not-found'},{'name': 'SignupComponent', 'selector': 'app-signup'},{'name': 'TodoComponent', 'selector': 'app-todo'}];
+        var COMPONENT_TEMPLATE = '<div><mat-sidenav-container  class="sidenav-container mat-app-background"  [ngClass]="{ \'dark-theme\': isDarkTheme }">  <mat-sidenav    #drawer    class="sidenav"    fixedInViewport="true"    [attr.role]="(isHandset$ | async) ? \'dialog\' : \'navigation\'"    [mode]="(isHandset$ | async) ? \'over\' : \'side\'"    [opened]="(isHandset$ | async) && isOpened"  >    <mat-toolbar color="primary" class="mat-elevation-z2">Menu</mat-toolbar>    <mat-nav-list>      <a        mat-list-item        routerLink="/board"        routerLinkActive="active"        *ngIf="isAuth"        (click)="drawer.close()"      >        My Board      </a>      <a        mat-list-item        routerLink="/user/signup"        routerLinkActive="active"        *ngIf="!isAuth"        (click)="drawer.close()"      >        Sign Up      </a>      <a        mat-list-item        routerLink="/user/login"        routerLinkActive="active"        *ngIf="!isAuth"        (click)="drawer.close()"      >        Log In      </a>      <a mat-list-item *ngIf="isAuth" (click)="onLogout()">        Log Out      </a>    </mat-nav-list>  </mat-sidenav>  <mat-sidenav-content>    <mat-toolbar color="primary" class="mat-elevation-z8">      <button        type="button"        aria-label="Toggle sidenav"        mat-icon-button        (click)="drawer.toggle()"        *ngIf="isHandset$ | async"      >        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>      </button>      <span><a routerLink="">devDo</a></span>      <div class="spacer"></div>      <mat-nav-list class="main-navigation" *ngIf="!(isHandset$ | async)">        <a          mat-list-item          routerLink="/board"          routerLinkActive="active"          *ngIf="isAuth"        >          My Board        </a>        <a          mat-list-item          routerLink="/user/signup"          routerLinkActive="active"          *ngIf="!isAuth"        >          Sign Up        </a>        <a          mat-list-item          routerLink="/user/login"          routerLinkActive="active"          *ngIf="!isAuth"        >          Log In        </a>        <a mat-list-item *ngIf="isAuth" (click)="onLogout()">          Log Out        </a>      </mat-nav-list>      <mat-slide-toggle matTooltip=\'Change theme\' (change)="toggleTheme()"></mat-slide-toggle>    </mat-toolbar>    <ng-content></ng-content>  </mat-sidenav-content></mat-sidenav-container></div>'
+    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'BoardComponent', 'selector': 'app-board'},{'name': 'CreateTaskComponent', 'selector': 'app-create-task'},{'name': 'EditTaskComponent', 'selector': 'app-edit-task'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'NavigationComponent', 'selector': 'app-navigation'},{'name': 'PageNotFoundComponent', 'selector': 'app-page-not-found'},{'name': 'SignupComponent', 'selector': 'app-signup'},{'name': 'TasksCardListComponent', 'selector': 'app-tasks-card-list'},{'name': 'TasksComponent', 'selector': 'app-tasks'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'NavigationComponent'};
 </script>
@@ -770,6 +851,7 @@ a {
 
 
 
+                   
 
 
 
@@ -792,6 +874,7 @@ a {
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'component';
             var COMPODOC_CURRENT_PAGE_URL = 'NavigationComponent.html';
+            var MAX_SEARCH_RESULTS = 15;
        </script>
 
        <script src="../js/libs/custom-elements.min.js"></script>
